# quacksql

./: .gitignore  LICENSE  README.md  pyproject.toml
quacksql/: __init__.py
