[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quacksql"
version = "0.1.1"
description = "A simple Python wrapper for DuckDB with SQL file module loading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "D.C. Hess", email = "dc.hess@gmail.com"},
]
maintainers = [
    {name = "D.C. Hess", email = "dc.hess@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["duckdb", "sql", "database", "query"]
dependencies = [
    "duckdb>=0.9.0",
    "pandas",  # Required for .df() method
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dchess/quacksql"
Documentation = "https://github.com/dchess/quacksql#readme"
Repository = "https://github.com/dchess/quacksql.git"
Issues = "https://github.com/dchess/quacksql/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quacksql*"]
exclude = ["tests*"]
